[package]
name = "escrow_quasar"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }
quasar-spl =  { git = "https://github.com/blueshift-gg/quasar" }


[dev-dependencies]
escrow_quasar-client = { path = "target/client/rust/escrow_quasar-client" }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-account = { version = "3.4.0" }
solana-keypair = "3.1.2"
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
solana-program-option = "3.1.0"
spl-token = "9.0.0"
solana-program-pack = "3.1.0"
